run pipeline and update cache

--- a/Pipelines/Production/InitialIngestionPipeline.ipynb
+++ b/Pipelines/Production/InitialIngestionPipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -120,156 +120,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16061</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48QHdg</td>\n",
-       "      <td>This Is House 2 House</td>\n",
+       "      <th>16841</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4nZC1y</td>\n",
+       "      <td>This Is Microwave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16062</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48qIOc</td>\n",
-       "      <td>This Is Daniel Santos</td>\n",
+       "      <th>16842</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o1hoM</td>\n",
+       "      <td>This Is Sparks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16063</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48QP3q</td>\n",
-       "      <td>This Is Velmurugan</td>\n",
+       "      <th>16843</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o1xmM</td>\n",
+       "      <td>This Is Nessa Barrett</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16064</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48Rn9u</td>\n",
-       "      <td>This Is Kacey Musgraves</td>\n",
+       "      <th>16844</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o2DyV</td>\n",
+       "      <td>This Is Sky Ferreira</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16065</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48RVfz</td>\n",
-       "      <td>This Is Mayke &amp; Rodrigo</td>\n",
+       "      <th>16845</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o5F6h</td>\n",
+       "      <td>This Is Kieran the Light</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16066</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48sTNC</td>\n",
-       "      <td>This Is Toots &amp; The Maytals</td>\n",
+       "      <th>16846</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o6Lio</td>\n",
+       "      <td>This Is Desiigner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16067</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48Tl79</td>\n",
-       "      <td>This Is Adolescent's Orquesta</td>\n",
+       "      <th>16847</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o6ufn</td>\n",
+       "      <td>This Is Atlus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16068</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48vRm5</td>\n",
-       "      <td>This Is Chelsea Wolfe</td>\n",
+       "      <th>16848</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o7Aru</td>\n",
+       "      <td>This Is K'NAAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16069</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wKu4</td>\n",
-       "      <td>This Is Ozzy Osbourne</td>\n",
+       "      <th>16849</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oaBYR</td>\n",
+       "      <td>This Is RSP &amp; Thomax</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16070</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wtr2</td>\n",
-       "      <td>This Is Frxzbie</td>\n",
+       "      <th>16850</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oC80z</td>\n",
+       "      <td>This Is Sara Evans</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16071</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wtVJ</td>\n",
-       "      <td>This Is Darlene Zschech</td>\n",
+       "      <th>16851</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oCSVt</td>\n",
+       "      <td>This Is Zayda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16072</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO48yGQO</td>\n",
-       "      <td>This Is Great White</td>\n",
+       "      <th>16852</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4od5q8</td>\n",
+       "      <td>This Is Jess Ray</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16073</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO490IOB</td>\n",
-       "      <td>This Is Vision Quest</td>\n",
+       "      <th>16853</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4odlV7</td>\n",
+       "      <td>This Is José Afonso</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16074</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49100e</td>\n",
-       "      <td>This Is Wicca Phase Springs Eternal</td>\n",
+       "      <th>16854</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4odUze</td>\n",
+       "      <td>This Is The Westerlies</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16075</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO491yeR</td>\n",
-       "      <td>This Is Udit Narayan</td>\n",
+       "      <th>16855</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oEAjm</td>\n",
+       "      <td>This Is Wxlf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16076</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49263K</td>\n",
-       "      <td>This Is Shinedown</td>\n",
+       "      <th>16856</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oF8pr</td>\n",
+       "      <td>This Is Manuel Carrasco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16077</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49Bx42</td>\n",
-       "      <td>This Is Khainz</td>\n",
+       "      <th>16857</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ofPUs</td>\n",
+       "      <td>This Is Büyük Ev Ablukada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16078</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49C75y</td>\n",
-       "      <td>This Is DJ Zirk</td>\n",
+       "      <th>16858</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ofXbN</td>\n",
+       "      <td>This Is Israel Houghton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16079</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49C7sY</td>\n",
-       "      <td>This Is Zeppet Store</td>\n",
+       "      <th>16859</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oGMHC</td>\n",
+       "      <td>This Is DJ Challenge X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16080</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO49FsFs</td>\n",
-       "      <td>This Is David Quinlan</td>\n",
+       "      <th>16860</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ohLfG</td>\n",
+       "      <td>This Is Vulfpeck</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  playlist_uri  \\\n",
-       "16061  spotify:playlist:37i9dQZF1DZ06evO48QHdg   \n",
-       "16062  spotify:playlist:37i9dQZF1DZ06evO48qIOc   \n",
-       "16063  spotify:playlist:37i9dQZF1DZ06evO48QP3q   \n",
-       "16064  spotify:playlist:37i9dQZF1DZ06evO48Rn9u   \n",
-       "16065  spotify:playlist:37i9dQZF1DZ06evO48RVfz   \n",
-       "16066  spotify:playlist:37i9dQZF1DZ06evO48sTNC   \n",
-       "16067  spotify:playlist:37i9dQZF1DZ06evO48Tl79   \n",
-       "16068  spotify:playlist:37i9dQZF1DZ06evO48vRm5   \n",
-       "16069  spotify:playlist:37i9dQZF1DZ06evO48wKu4   \n",
-       "16070  spotify:playlist:37i9dQZF1DZ06evO48wtr2   \n",
-       "16071  spotify:playlist:37i9dQZF1DZ06evO48wtVJ   \n",
-       "16072  spotify:playlist:37i9dQZF1DZ06evO48yGQO   \n",
-       "16073  spotify:playlist:37i9dQZF1DZ06evO490IOB   \n",
-       "16074  spotify:playlist:37i9dQZF1DZ06evO49100e   \n",
-       "16075  spotify:playlist:37i9dQZF1DZ06evO491yeR   \n",
-       "16076  spotify:playlist:37i9dQZF1DZ06evO49263K   \n",
-       "16077  spotify:playlist:37i9dQZF1DZ06evO49Bx42   \n",
-       "16078  spotify:playlist:37i9dQZF1DZ06evO49C75y   \n",
-       "16079  spotify:playlist:37i9dQZF1DZ06evO49C7sY   \n",
-       "16080  spotify:playlist:37i9dQZF1DZ06evO49FsFs   \n",
-       "\n",
-       "                             playlist_name  \n",
-       "16061                This Is House 2 House  \n",
-       "16062                This Is Daniel Santos  \n",
-       "16063                   This Is Velmurugan  \n",
-       "16064              This Is Kacey Musgraves  \n",
-       "16065              This Is Mayke & Rodrigo  \n",
-       "16066          This Is Toots & The Maytals  \n",
-       "16067        This Is Adolescent's Orquesta  \n",
-       "16068                This Is Chelsea Wolfe  \n",
-       "16069                This Is Ozzy Osbourne  \n",
-       "16070                      This Is Frxzbie  \n",
-       "16071              This Is Darlene Zschech  \n",
-       "16072                  This Is Great White  \n",
-       "16073                 This Is Vision Quest  \n",
-       "16074  This Is Wicca Phase Springs Eternal  \n",
-       "16075                 This Is Udit Narayan  \n",
-       "16076                    This Is Shinedown  \n",
-       "16077                       This Is Khainz  \n",
-       "16078                      This Is DJ Zirk  \n",
-       "16079                 This Is Zeppet Store  \n",
-       "16080                This Is David Quinlan  "
+       "                                  playlist_uri              playlist_name\n",
+       "16841  spotify:playlist:37i9dQZF1DZ06evO4nZC1y          This Is Microwave\n",
+       "16842  spotify:playlist:37i9dQZF1DZ06evO4o1hoM             This Is Sparks\n",
+       "16843  spotify:playlist:37i9dQZF1DZ06evO4o1xmM      This Is Nessa Barrett\n",
+       "16844  spotify:playlist:37i9dQZF1DZ06evO4o2DyV       This Is Sky Ferreira\n",
+       "16845  spotify:playlist:37i9dQZF1DZ06evO4o5F6h   This Is Kieran the Light\n",
+       "16846  spotify:playlist:37i9dQZF1DZ06evO4o6Lio          This Is Desiigner\n",
+       "16847  spotify:playlist:37i9dQZF1DZ06evO4o6ufn              This Is Atlus\n",
+       "16848  spotify:playlist:37i9dQZF1DZ06evO4o7Aru             This Is K'NAAN\n",
+       "16849  spotify:playlist:37i9dQZF1DZ06evO4oaBYR       This Is RSP & Thomax\n",
+       "16850  spotify:playlist:37i9dQZF1DZ06evO4oC80z         This Is Sara Evans\n",
+       "16851  spotify:playlist:37i9dQZF1DZ06evO4oCSVt              This Is Zayda\n",
+       "16852  spotify:playlist:37i9dQZF1DZ06evO4od5q8           This Is Jess Ray\n",
+       "16853  spotify:playlist:37i9dQZF1DZ06evO4odlV7        This Is José Afonso\n",
+       "16854  spotify:playlist:37i9dQZF1DZ06evO4odUze     This Is The Westerlies\n",
+       "16855  spotify:playlist:37i9dQZF1DZ06evO4oEAjm               This Is Wxlf\n",
+       "16856  spotify:playlist:37i9dQZF1DZ06evO4oF8pr    This Is Manuel Carrasco\n",
+       "16857  spotify:playlist:37i9dQZF1DZ06evO4ofPUs  This Is Büyük Ev Ablukada\n",
+       "16858  spotify:playlist:37i9dQZF1DZ06evO4ofXbN    This Is Israel Houghton\n",
+       "16859  spotify:playlist:37i9dQZF1DZ06evO4oGMHC     This Is DJ Challenge X\n",
+       "16860  spotify:playlist:37i9dQZF1DZ06evO4ohLfG           This Is Vulfpeck"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.75it/s]\n"
+      "100%|██████████| 20/20 [00:14<00:00,  1.43it/s]\n"
      ]
     },
     {
@@ -420,7 +398,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|█▏        | 88/768 [00:12<01:24,  8.01it/s]"
+      "100%|██████████| 714/714 [01:44<00:00,  6.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artists updata #1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 714/714 [01:09<00:00, 10.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio_features updated #1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:14<00:00,  1.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "playlist_tracks updated #2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 749/749 [01:53<00:00,  6.62it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artists updata #2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 749/749 [01:29<00:00,  8.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audio_features updated #2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:15<00:00,  1.26it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "playlist_tracks updated #3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▏   | 420/675 [01:06<00:31,  8.07it/s]"
      ]
     }
    ],
