run pipeline and update cache and batch size

--- a/Pipelines/Production/InitialIngestionPipeline.ipynb
+++ b/Pipelines/Production/InitialIngestionPipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -120,134 +120,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16841</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4nZC1y</td>\n",
-       "      <td>This Is Microwave</td>\n",
+       "      <th>17574</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfFQvdFSIRRl</td>\n",
+       "      <td>Clean Workout Upbeat Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16842</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o1hoM</td>\n",
-       "      <td>This Is Sparks</td>\n",
+       "      <th>17577</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfglLEyw51KY</td>\n",
+       "      <td>Country Hits Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16843</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o1xmM</td>\n",
-       "      <td>This Is Nessa Barrett</td>\n",
+       "      <th>17596</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfocGsfb5B1R</td>\n",
+       "      <td>Clean R&amp;B Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16844</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o2DyV</td>\n",
-       "      <td>This Is Sky Ferreira</td>\n",
+       "      <th>17633</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfXSWAkNhQbi</td>\n",
+       "      <td>2010s EDM Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16845</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o5F6h</td>\n",
-       "      <td>This Is Kieran the Light</td>\n",
+       "      <th>17634</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfYEGlxfG5a0</td>\n",
+       "      <td>Hip Hop House Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16846</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o6Lio</td>\n",
-       "      <td>This Is Desiigner</td>\n",
+       "      <th>17635</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfyHGfvPQvQQ</td>\n",
+       "      <td>Beach House Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16847</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o6ufn</td>\n",
-       "      <td>This Is Atlus</td>\n",
+       "      <th>17636</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfYOWZLm9iq6</td>\n",
+       "      <td>Hype Hip Hop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16848</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4o7Aru</td>\n",
-       "      <td>This Is K'NAAN</td>\n",
+       "      <th>17637</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfyXR9EchWmA</td>\n",
+       "      <td>German Pop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16849</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oaBYR</td>\n",
-       "      <td>This Is RSP &amp; Thomax</td>\n",
+       "      <th>17638</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIfzDyEgytsCm</td>\n",
+       "      <td>Viral Pop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16850</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oC80z</td>\n",
-       "      <td>This Is Sara Evans</td>\n",
+       "      <th>17639</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg0AuSxAydwd</td>\n",
+       "      <td>80s Pop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16851</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oCSVt</td>\n",
-       "      <td>This Is Zayda</td>\n",
+       "      <th>17640</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg0GuqGPKSF3</td>\n",
+       "      <td>Happy Upbeat Workout Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16852</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4od5q8</td>\n",
-       "      <td>This Is Jess Ray</td>\n",
+       "      <th>17641</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg0oP5iUYDJ6</td>\n",
+       "      <td>G-House Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16853</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4odlV7</td>\n",
-       "      <td>This Is José Afonso</td>\n",
+       "      <th>17642</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg0Su2BAe75w</td>\n",
+       "      <td>Norwegian Pop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16854</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4odUze</td>\n",
-       "      <td>This Is The Westerlies</td>\n",
+       "      <th>17643</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg1CDFbbqhYq</td>\n",
+       "      <td>Happy Country Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16855</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oEAjm</td>\n",
-       "      <td>This Is Wxlf</td>\n",
+       "      <th>17644</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg1fFHYIUezl</td>\n",
+       "      <td>80s Synth Pop Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16856</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oF8pr</td>\n",
-       "      <td>This Is Manuel Carrasco</td>\n",
+       "      <th>17645</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg1p0x6beBBb</td>\n",
+       "      <td>Pop Punk Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16857</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ofPUs</td>\n",
-       "      <td>This Is Büyük Ev Ablukada</td>\n",
+       "      <th>17646</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg4k3jLsNu20</td>\n",
+       "      <td>Acid House Techno Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16858</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ofXbN</td>\n",
-       "      <td>This Is Israel Houghton</td>\n",
+       "      <th>17647</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg5TrATBFjSk</td>\n",
+       "      <td>Chill French House Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16859</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4oGMHC</td>\n",
-       "      <td>This Is DJ Challenge X</td>\n",
+       "      <th>17648</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg5u85I1envf</td>\n",
+       "      <td>Coffee House Instrumental Mix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16860</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO4ohLfG</td>\n",
-       "      <td>This Is Vulfpeck</td>\n",
+       "      <th>17649</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1EIg6wRHlzfiM5</td>\n",
+       "      <td>Anime EDM Mix</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  playlist_uri              playlist_name\n",
-       "16841  spotify:playlist:37i9dQZF1DZ06evO4nZC1y          This Is Microwave\n",
-       "16842  spotify:playlist:37i9dQZF1DZ06evO4o1hoM             This Is Sparks\n",
-       "16843  spotify:playlist:37i9dQZF1DZ06evO4o1xmM      This Is Nessa Barrett\n",
-       "16844  spotify:playlist:37i9dQZF1DZ06evO4o2DyV       This Is Sky Ferreira\n",
-       "16845  spotify:playlist:37i9dQZF1DZ06evO4o5F6h   This Is Kieran the Light\n",
-       "16846  spotify:playlist:37i9dQZF1DZ06evO4o6Lio          This Is Desiigner\n",
-       "16847  spotify:playlist:37i9dQZF1DZ06evO4o6ufn              This Is Atlus\n",
-       "16848  spotify:playlist:37i9dQZF1DZ06evO4o7Aru             This Is K'NAAN\n",
-       "16849  spotify:playlist:37i9dQZF1DZ06evO4oaBYR       This Is RSP & Thomax\n",
-       "16850  spotify:playlist:37i9dQZF1DZ06evO4oC80z         This Is Sara Evans\n",
-       "16851  spotify:playlist:37i9dQZF1DZ06evO4oCSVt              This Is Zayda\n",
-       "16852  spotify:playlist:37i9dQZF1DZ06evO4od5q8           This Is Jess Ray\n",
-       "16853  spotify:playlist:37i9dQZF1DZ06evO4odlV7        This Is José Afonso\n",
-       "16854  spotify:playlist:37i9dQZF1DZ06evO4odUze     This Is The Westerlies\n",
-       "16855  spotify:playlist:37i9dQZF1DZ06evO4oEAjm               This Is Wxlf\n",
-       "16856  spotify:playlist:37i9dQZF1DZ06evO4oF8pr    This Is Manuel Carrasco\n",
-       "16857  spotify:playlist:37i9dQZF1DZ06evO4ofPUs  This Is Büyük Ev Ablukada\n",
-       "16858  spotify:playlist:37i9dQZF1DZ06evO4ofXbN    This Is Israel Houghton\n",
-       "16859  spotify:playlist:37i9dQZF1DZ06evO4oGMHC     This Is DJ Challenge X\n",
-       "16860  spotify:playlist:37i9dQZF1DZ06evO4ohLfG           This Is Vulfpeck"
+       "                                  playlist_uri                  playlist_name\n",
+       "17574  spotify:playlist:37i9dQZF1EIfFQvdFSIRRl       Clean Workout Upbeat Mix\n",
+       "17577  spotify:playlist:37i9dQZF1EIfglLEyw51KY               Country Hits Mix\n",
+       "17596  spotify:playlist:37i9dQZF1EIfocGsfb5B1R                  Clean R&B Mix\n",
+       "17633  spotify:playlist:37i9dQZF1EIfXSWAkNhQbi                  2010s EDM Mix\n",
+       "17634  spotify:playlist:37i9dQZF1EIfYEGlxfG5a0              Hip Hop House Mix\n",
+       "17635  spotify:playlist:37i9dQZF1EIfyHGfvPQvQQ                Beach House Mix\n",
+       "17636  spotify:playlist:37i9dQZF1EIfYOWZLm9iq6               Hype Hip Hop Mix\n",
+       "17637  spotify:playlist:37i9dQZF1EIfyXR9EchWmA                 German Pop Mix\n",
+       "17638  spotify:playlist:37i9dQZF1EIfzDyEgytsCm                  Viral Pop Mix\n",
+       "17639  spotify:playlist:37i9dQZF1EIg0AuSxAydwd                    80s Pop Mix\n",
+       "17640  spotify:playlist:37i9dQZF1EIg0GuqGPKSF3       Happy Upbeat Workout Mix\n",
+       "17641  spotify:playlist:37i9dQZF1EIg0oP5iUYDJ6                    G-House Mix\n",
+       "17642  spotify:playlist:37i9dQZF1EIg0Su2BAe75w              Norwegian Pop Mix\n",
+       "17643  spotify:playlist:37i9dQZF1EIg1CDFbbqhYq              Happy Country Mix\n",
+       "17644  spotify:playlist:37i9dQZF1EIg1fFHYIUezl              80s Synth Pop Mix\n",
+       "17645  spotify:playlist:37i9dQZF1EIg1p0x6beBBb                   Pop Punk Mix\n",
+       "17646  spotify:playlist:37i9dQZF1EIg4k3jLsNu20          Acid House Techno Mix\n",
+       "17647  spotify:playlist:37i9dQZF1EIg5TrATBFjSk         Chill French House Mix\n",
+       "17648  spotify:playlist:37i9dQZF1EIg5u85I1envf  Coffee House Instrumental Mix\n",
+       "17649  spotify:playlist:37i9dQZF1EIg6wRHlzfiM5                  Anime EDM Mix"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
     "anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
     "\n",
     "new_batch = pd.DataFrame(anti_join)\n",
-    "new_batch = new_batch[0:20]\n",
+    "new_batch = new_batch[0:25]\n",
     "new_batch.head(20)"
    ]
   },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
     "        anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
     "\n",
     "        new_batch = pd.DataFrame(anti_join)\n",
-    "        new_batch = new_batch[0:20]\n",
+    "        new_batch = new_batch[0:35]\n",
     "        \n",
     "        # extract all tracks in playlists\n",
     "        load_batch = []\n",
@@ -351,7 +351,7 @@
     "        df2 = df2[['track_uri', 'artist1', 'artist2', 'artist3', 'artist4', 'artist5']]\n",
     "        \n",
     "        df2.to_sql('artists', engine, if_exists='append')\n",
-    "        print(f'artists updata #{i}')\n",
+    "        print(f'artists updated #{i}')\n",
     "        \n",
     "        # extract all audio_features\n",
     "        df = pd.read_sql('''SELECT DISTINCT track_uri FROM audio_features''', engine)\n",
@@ -377,14 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.43it/s]\n"
+      "  0%|          | 0/35 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIfFQvdFSIRRl/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "  3%|▎         | 1/35 [00:00<00:07,  4.65it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIfglLEyw51KY/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "  6%|▌         | 2/35 [00:00<00:05,  5.92it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIfocGsfb5B1R/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      " 94%|█████████▍| 33/35 [00:20<00:01,  1.30it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgDmydcVg4G3/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "100%|██████████| 35/35 [00:21<00:00,  1.64it/s]\n"
      ]
     },
     {
@@ -398,21 +402,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 714/714 [01:44<00:00,  6.84it/s]\n"
+      "100%|██████████| 589/589 [01:05<00:00,  8.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artists updata #1\n"
+      "artists updated #1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 714/714 [01:09<00:00, 10.32it/s]\n"
+      "100%|██████████| 591/591 [01:01<00:00,  9.61it/s]\n"
      ]
     },
     {
@@ -426,7 +430,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.35it/s]\n"
+      "  0%|          | 0/35 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgDmydcVg4G3/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "  3%|▎         | 1/35 [00:00<00:06,  5.64it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgE6oUFaZaNB/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "100%|██████████| 35/35 [00:23<00:00,  1.50it/s]\n"
      ]
     },
     {
@@ -440,21 +446,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 749/749 [01:53<00:00,  6.62it/s]\n"
+      "100%|██████████| 460/460 [00:49<00:00,  9.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artists updata #2\n"
+      "artists updated #2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 749/749 [01:29<00:00,  8.41it/s]\n"
+      "100%|██████████| 460/460 [00:43<00:00, 10.58it/s]\n"
      ]
     },
     {
@@ -468,7 +474,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:15<00:00,  1.26it/s]\n"
+      "  0%|          | 0/35 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgDmydcVg4G3/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "  3%|▎         | 1/35 [00:00<00:04,  7.06it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgE6oUFaZaNB/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      " 29%|██▊       | 10/35 [00:06<00:18,  1.33it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIguCzczK7LFU/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      " 46%|████▌     | 16/35 [00:09<00:12,  1.52it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1EIgWiAaVU312d/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "100%|██████████| 35/35 [00:23<00:00,  1.48it/s]\n"
      ]
     },
     {
@@ -482,7 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 62%|██████▏   | 420/675 [01:06<00:31,  8.07it/s]"
+      " 56%|█████▌    | 345/616 [00:36<00:29,  9.32it/s]"
      ]
     }
    ],
